# python-project-50

./: .build-timestamp  .flake8  .gitignore  Makefile  README.md  debug_imports.py  demo.cast  gendiff-recursive.cast  gendiff-yaml.ca  gendiff-yaml.cast  gendiff.py  pyproject.toml  pytest.ini
.github/workflows/: my_workflow.yml
code/: pyproject.toml
code/hexlet_code/: diff_builder.py  gendiff.py
code/hexlet_code/formatters/: json.py  plain.py
gendiff/scripts/: find_diff.py
hexlet_code/: __init__.py  gendiff.py  parsers.py
hexlet_code/formatters/: __init__.py  plain.py  stylish.py
hexlet_code/scripts/: gendiff.py
tests/: test_10_diff.py  test_gendiff.py
tests/test_data/: expected_json.txt
